<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_text"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/filter_text"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name_text" />
            <item
                android:id="@+id/action_sort_by_date"
                android:title="@string/sort_by_date_text" />
        </menu>

    </item>

    <item
        android:id="@+id/action_hide_fav"
        android:checkable="true"
        android:title="@string/hide_favourites_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all_contacts_text"
        app:showAsAction="never" />

</menu>